2008-09-01  Hans Petter Jansson  <hpj@novell.com>

	* configure.ac: Post-release version bump to 0.99.7.

=== gvfs 0.99.6 ===

2008-09-01  Hans Petter Jansson  <hpj@novell.com>

	* NEWS: Update for 0.99.6.

2008-09-01  Christian Kellner  <gicmo@gnome.org>
	
	* configure.ac:
	Require libsoup >= 2.23.91

2008-09-01  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsjobpull.c:
	* daemon/gvfsjobpull.h:
	New daemon method to pull files from daemons to the local
	file system.

	* daemon/gvfsjobpush.c:
	* daemon/gvfsjobpush.h:
	New daemon method to push local files to daemons. (Replaces
	Upload)

	* daemon/gvfsjobupload.c:
	* daemon/gvfsjobupload.h:
	Replaced by Push.

	* common/gvfsdaemonprotocol.h:
	* daemon/Makefile.am:
	* daemon/gvfsbackend.c:
	* daemon/gvfsbackend.h:
	Add Push and Pull. Remove Upload.

	* client/gdaemonfile.c:	
	New transfer logic. In case of move try push/pull (with
	remove_source set to TRUE) first then fallback. In case of copy
	try push/pull first then fallback. Use the same logic for
	both cases.

	* daemon/gvfsbackendburn.c:
	Port Upload to Push.
	
	* daemon/gvfsbackendtrash.c:
	Implement the Pull method. That should fix bug #529971

2008-09-01  Christian Kellner  <gicmo@gnome.org>

	* monitor/hal/ghalvolume.c: (do_update_from_hal):
	Use g_format_size_for_display for consistency.
	Patch from Christian Persch <chpe@gnome.org>
	Fixes bug #550100

2008-08-30  Matthias Clasen  <mclasen@redhat.com>

	* common/gmountspec.c (g_mount_spec_from_dbus): Plug a tiny
	memory leak.

2008-08-28  David Zeuthen  <davidz@redhat.com>

	* monitor/proxy/gproxyvolume.c: (g_proxy_volume_mount):
	* monitor/proxy/gvfsproxyvolumemonitordaemon.c:
	(handle_volume_mount): Make sure we really read mount_flags and
	use_mount_operation. Fixes RH bug 460223.

2008-08-27  Bastien Nocera  <hadess@hadess.net>

	* client/gdaemonvfs.c (get_mountspec_from_uri),
	(_g_daemon_vfs_get_uri_for_mountspec): Don't drop
	query and fragment portions of the URI when decoding